projetGL/src/test/deca/extension/synt/invalid/test_invalid_04.deca
{
    int[] tab=tab[1!1];
}